testsuite/tests/partial-sigs/should_fail/WildcardInStandaloneDeriving.hs
{-# LANGUAGE StandaloneDeriving #-}
module WildcardInStandaloneDeriving where

deriving instance _
