testsuite/tests/partial-sigs/should_fail/WildcardInStandaloneDeriving.stderr

WildcardInStandaloneDeriving.hs:4:19: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in a deriving declaration
